# D.I.A.N.A_Project

./: .gitignore  MANUAL.md  check.ps1  check.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: avatar-2d.ts  avatar.ts  claude.ts  main.ts  movement.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
